# gooddata-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
scripts/: analyze_permissions.py
src/gooddata_cli/: __init__.py  cli.py  export.py  mcp_server.py  query.py  sdk.py
